# rak

./: Cargo.toml  LICENSE
docs/superpowers/specs/: 2026-04-09-record-transcribe-design.md
src/: config.rs  history.rs  leitner.rs  main.rs
src/analyzer/: claude.rs  gemini.rs  mod.rs
src/commands/: analyze.rs  init.rs  mod.rs  next.rs  record.rs  scrape.rs  transcribe.rs
src/commands/leetcode/: log.rs  mod.rs  next.rs
src/recorder/: fft.rs  mod.rs  tui.rs
src/stt/: elevenlabs.rs  mod.rs  openrouter.rs
