[package]
name = "rak"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22"
clap = { version = "4.6.0", features = ["derive"] }
chromiumoxide = { version = "0.9", features = ["bytes"] }
crossterm = "0.28"
dotenvy = "0.15"
futures = "0.3"
htmd = "0.5"
libc = "0.2"
ratatui = "0.29"
regex = "1"
reqwest = { version = "0.12", features = ["multipart", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yml = "0.0.12"
toml = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
